omni/tests/goldens/types/undefined_ident_22.err
tests/goldens/types/undefined_ident_22.omni:1:20: error: undefined identifier "missing22"
  let result22:int = missing22
                     ^~~ hint: declare the name before using it
